--- a/PersonalityTraits.ipynb
+++ b/PersonalityTraits.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Personality Trait Prediction\n",
-    "\n",
-    "<img src=\"model.png\" />"
+    "# Personality Trait Prediction\n"
    ]
   },
   {
